src/test/ui/issues/issue-19380.stderr
error[E0038]: the trait `Qiz` cannot be made into an object
  --> $DIR/issue-19380.rs:11:3
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL |   foos: &'static [&'static (dyn Qiz + 'static)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Qiz` cannot be made into an object
   |
   = note: method `qiz` has no receiver
=======
LL |   fn qiz();
   |      --- associated function `qiz` has no `self` parameter
...
LL |   foos: &'static [&'static (dyn Qiz + 'static)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Qiz` cannot be made into an object
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
